--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,22 @@ h1 {
         text-decoration: underline;
     }
 }
+
+p{
+    text-align: justify;
+}
+
+@media (max-width: 600px) {
+    .header {
+        flex-direction: column;
+    }
+
+    img {
+        width: 100%;
+    }
+
+    h1 {
+        font-size: 30px;
+        text-align: center;
+    }
+}
