--- a/styles.css
+++ b/styles.css
@@ -56,44 +56,68 @@ h1 {
     margin: 0;
 }
 
-.ing{
+.ing {
     max-width: 1300px;
 }
 
-.ing h3{
+.ing h3 {
     font-size: 20px;
-    &:hover{
+
+    &:hover {
         text-decoration: underline;
     }
 }
 
-.ing-1{
+.ing-1 {
     padding-top: 20px;
     max-width: 1300px;
 }
 
-.ing-1 h3{
+.ing-1 h3 {
     font-size: 20px;
-    &:hover{
+
+    &:hover {
         text-decoration: underline;
     }
 }
 
-p{
+p {
     text-align: justify;
+}
+
+
+#btn-subir {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+    background: #002060;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 15px;
 }
 
 @media (max-width: 600px) {
     .header {
+        display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 
     img {
         width: 100%;
+        max-width: 300px;
+        height: auto;
+        margin: 0 auto;
     }
 
     h1 {
         font-size: 30px;
         text-align: center;
+        margin: 10px 0;
     }
 }
