Actualizar título de la página y agregar alineación justificada a listas en estilos CSS

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,10 @@ p {
     text-align: justify;
 }
 
+.container_informacion ul {
+    text-align: justify;
+}
+
 
 #btn-subir {
     position: fixed;
